fix date nowrap

--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -16,7 +16,8 @@
 
 .PostDate {
     color: #B6B7BA;
-    font-size: 12px;;
+    font-size: 12px;
+    white-space: nowrap;
 }
 
 .Img {
